--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -107,7 +107,44 @@
 }
 .menu .menu-list{
     display: flex;
-    /* list-style: none; */
+    list-style: none;
+    align-items: center;
+}
+.menu-list ul{
+    list-style: none;
+    /* position: relative; */
 }
 
-   
+.dropdown {
+    display: none;
+  }
+  
+  li:hover .dropdown {
+    display: block;
+  }
+  
+
+/* Dropdowns */
+
+.drop{
+    position: absolute;
+    width: 80%;
+    height: auto;
+    background-color: aqua;
+    margin-top: 20px;
+    margin-left: 10px;
+    left: 0px;
+}
+.drop .drop-ul{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.drop-ul li{
+    width: 30%;
+    height: auto;
+    background-color: bisque;
+}
