--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -103,12 +103,16 @@
 
 .menu{
     height: 37px;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
 }
 .menu .menu-list{
     display: flex;
+    justify-content: space-between;
+    line-height: 37px;
     list-style: none;
     align-items: center;
+    padding-right: 20px;
+    border-top: 1px solid grey;
 }
 .menu-list ul{
     list-style: none;
@@ -147,4 +151,80 @@
     width: 30%;
     height: auto;
     background-color: bisque;
+}
+
+/* slider */
+
+
+/* .mainslide {
+    width: 100%;
+    height: 450px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+.leftimg {
+    position: absolute;
+    width: 40%;
+    height: 100%;
+    background-color: aliceblue;
+}
+
+.leftimg img {
+    width: 100%;
+    height: 100%;
+}
+
+.rightimg {
+    width: 60%;
+    height: 100%;
+    position: absolute;
+}
+
+.rightimg img {
+    width: 100%;
+    height: 100%;
+
+} */
+
+
+/* saleproduct */
+
+.salpro{
+    height: 400px;
+    margin: 20px;
+    background-color: aliceblue;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.salpro .left {
+    height: 300px;  
+    width: 240px;
+    /* background-color: red; */
+    padding:10px 0px;
+}
+
+.left .card{
+    height: 280px;
+    width: 200px;
+    background-color: #0079D2;
+    border-radius: 10px;
+}
+
+.salpro .right{
+    height: 300px;  
+    width: 80%;
+    background-color: yellow;
+    padding:10px 0px;
+
+}
+.right .card{
+    height: 280px;
+    width: 80%;
+    /* background-color: aliceblue; */
+    border-radius: 10px;
+    margin: auto;
 }
