--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -16,23 +16,25 @@
 }
 
 .logolist{
-    width: 25%;
-    height: 2p3x;
+    width: 65%;
+    height: 23px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    padding-left: 0%;
+    padding-left: 5%;
     margin: 0%;
 }
 
 .logolist li{
     list-style: none;
-    padding: 8px 8px 8px 10px;
+    /* padding: 8px 8px 8px 10px; */
 }
 
-.logolist li img{
-    height: 16px;
-    width: 44px;
+.logolist li img {
+  height: 16px ;
+  width: 44px ;
 }
+
 
 .header .right{
     width: 50%;
@@ -58,9 +60,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* background-color: aqua; */
-    padding: 0px 16px;
-    margin: 18px 0;
+    padding: 0% 20px;
+    /* margin: 18px 0; */
 }
 
 .navbar .logo{
@@ -94,102 +95,196 @@
     width: 600px;
 }
 
-.lists{
-    width: 28%;
-}
-.lists .icons{
-    width: 98%;
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    font-weight: 700;
-    stroke: #2f3337;
-    font-size: 11px;
-    text-align: center;
-}
-.icons-list{
+.lists {
     position: relative;
-}
-
-/* navbar dropdowns */
-.nav-drop{
-    position: absolute;
-    width: 500%;
-    height: auto;
-    margin-left: 0px;
-    left: -40px;
-    border: 1px solid black;
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    padding: 10px 20px;
     background-color: white;
-    
-}
-.nav-drop .navdrop-ul{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-   
-}
-
-.navdrop-ul li{
-    width: 100%;
-    list-style: none;
-    height: auto;
-    padding: 10px;
-}
-
-/* menuu */
-
-.menu{
-    height: 37px;
-    /* background-color: antiquewhite; */
-}
-.menu .menu-list{
-    display: flex;
-    justify-content: space-between;
-    line-height: 37px;
-    list-style: none;
-    align-items: center;
-    padding:0px 10px;
-    border-top: 1px solid grey;
-    margin: auto;
-}
-.menu-list ul{
-    list-style: none;
-}
-
-.dropdown {
-    display: none;
   }
   
-  li:hover .dropdown {
+  .icons {
+    list-style: none;
+    display: flex;
+    gap: 30px;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+  }
+  
+  .icons li {
+    position: relative;
+    text-align: center;
+    cursor: pointer;
+  }
+  
+  .icons li span {
+    font-size: 12px;
+    color: #2f3337;
+  }
+  
+  .nav-dropdown {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 100;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    min-width: 220px;
+    padding: 15px 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  }
+  
+  .icons li:hover .nav-dropdown {
     display: block;
   }
   
-
-/* Dropdowns */
-
-.drop{
-    position: absolute;
-    width: 80%;
-    height: auto;
-    background-color: aqua;
-    margin-left: 10px;
-    left: 0px;
-}
-.drop .drop-ul{
+  .nav-drop {
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+  }
+  
+  .navdrop-ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .navdrop-ul li {
+    padding: 8px 10px;
+    text-align: left;
+  }
+  
+  .navdrop-ul li h4 {
+    margin: 0;
+    font-size: 14px;
+    color: #2f3337;
+  }
+  
+  .navdrop-ul li div {
+    font-size: 12px;
+    color: #555;
+  }
+  
+  .navdrop-ul hr {
+    border: none;
+    border-top: 1px solid #ddd;
+    margin: 10px 0;
+  }
+  
+
+
+
+/* menuu */
+
+.menu {
+  width: 100%;
+  height: 36px;
+  line-height: 34px;
+  color: #333;
+  background-color: white;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
 }
 
-.drop-ul li{
-    width: 30%;
-    height: auto;
-    background-color: bisque;
+.menu-list {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
+.menu-list li{
+  position: relative;
+}
+
+
+.menu-list li span {
+  position: relative;
+  cursor: pointer;
+  font-size: 16px;
+  color: #333;
+  display: block;
+  /* transition: color 0.3s; */
+}
+
+
+/* Dropdown */
+.menu-dropdown {
+  position: absolute;
+  top: 100%;
+  left: -20px;
+  background-color: white;
+  padding: 20px;
+  display: none;
+  min-width: 250px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  z-index: 1000;
+}
+
+/* Show dropdown on hover */
+.menu-list li:hover .menu-dropdown {
+  display: block;
+}
+
+/* Inside dropdown */
+.drop {
+width: 800px;
+display: flex;
+gap: 30px;
+}
+
+.drop-ul {
+width: 70%;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  /* margin: 20px; */
+}
+.drop-ul div{
+    /* background-color: red; */
+    width: 150px;
+}
+
+.drop-ul > div > h4 {
+  font-size: 14px;
+  color: black;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+.drop-ul ul {
+  list-style: none;
+
+}
+
+.drop-ul ul li {
+  font-size: 14px;
+  color: #333;
+  cursor: pointer;
+  transition: color 0.2s;
+}
+.drop-ul div ul{
+    margin-left: -20%;
+}
+
+.drop-ul ul li:hover {
+  color: #0076be;
+}
+
+/* leftsidedrop */
+
+.leftsidedrop ul a{
+    margin-left: -32px;
+    color: rgb(237, 0, 0);
+    font-weight: 600;
+    text-decoration: none;
+}
+
 
 
 /* Home */
