--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -52,6 +52,23 @@
     font-weight: 500;
 }
 
+/* popup */
+.popup-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 800px; /* Optional: adjust based on content */
+  min-height: 200px; /* Optional: adjust based on content */
+  padding: 20px;
+  background-color: white; /* Optional */
+  border-radius: 8px; /* Optional */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional */
+  position: absolute;
+  transform: translate(-50% -50%);
+  /* left: 50%; */
+  right: 0%;
+  top: 50%;
+}
 
 /* navbar */
 
