--- a/src/Pages/page.css
+++ b/src/Pages/page.css
@@ -4,14 +4,21 @@
 .mainpage{
     width: 98%;
     height: auto;
+    display: flex;
+
+    justify-content: space-between;
     /* background-color: red; */
     margin: auto;
 }
+
+/* leftside */
+
 .mainpage .left{
     width: 300px;
     height: auto;
-    /* background-color: yellow; */
 }
+
+
 .category-list li{
     list-style: none;
     font-size: 16px;
@@ -23,6 +30,229 @@
     color: #ed0000ed;
     font-weight: 700;
   }
+
+
+  /* rightside */
+
+  .banners {
+    display: flex;
+    gap: 16px;
+    margin: 40px auto;
+    max-width: 1200px;
+    padding: 0 20px;
+    flex-wrap: wrap;
+  }
+  
+  .banner1 {
+    flex: 1 1 60%;
+    position: relative;
+    height: 630px;
+    width: 680px;
+  }
+  
+  .banner1 img {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    object-fit: cover;
+  }
+
+  .banner1 div{
+        position: absolute;
+        height: 190px;
+        width: 190px;
+        color: white;
+        text-align: center;
+        background-color: #0079D2;
+        top: 0px;
+        padding: 16px 8px ;
+  }
+
+  .banner1 button{
+    border: 1px solid white;
+    padding: 5px 16px;
+    background-color: #0079D2;
+    font-size: 14px;
+    border-radius: 3px;
+    line-height: 21px;
+    margin-top: 10px;
+    color: #fff;
+  }
+  
+  .banner2 {
+    height: 630px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .banner2 div {
+    background-color: #eaeaea;
+    padding: 16px;
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  }
+  
+  .banner2 span {
+    display: block;
+    font-weight: 600;
+    font-size: 1.2rem;
+    color: #333;
+    margin-bottom: 8px;
+    font-size: 28px;
+  }
+  
+  .banner2 img {
+    width: 100%;
+    height: auto;
+    border-radius: 4px;
+    object-fit: cover;
+  }
+
+
+  /* popularcat */
+  
+  .popularcat{
+    height: auto;
+    width: 98%;
+    margin: auto;
+  }
+
+  .popular-categories {
+    /* padding: 2rem; */
+    background-color: #f9f9f9;
+  }
+  
+  .popular-categories h2 {
+    font-size: 1.8rem;
+    margin-bottom: 1.5rem;
+    text-align: center;
+    color: #333;
+  }
+  
+  
+  .category-card {
+    height: 350px;
+    width: 292px;
+    background-color: #f5f6f7;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    margin: 30px 8px;
+  }
+  
+  .category-card:hover {
+    transform: translateY(-5px);
+  }
+  
+  .category-card img {
+    width: 292px;
+    height: 292px;
+    display: block;
+  }
+  
+  .category-card span {
+    display: block;
+    padding: 0.75rem;
+    font-weight: 600;
+    text-align: center;
+    color: #555;
+  }
+
+  /* by price */
+  
+
+  .shop-by-price {
+    height: auto;
+    width: 98%;
+    margin: auto;
+    padding: 2rem;
+    justify-content: space-between;
+    display: flex;
+  }
+  
+  
+  .price-list {
+    list-style: none;
+    padding: 0;
+    gap: 1rem;
+  }
+
+  
+  .price-list .pricecard {
+    height: 248px;
+    width: 260px;
+    display: block;
+    padding: 0.75rem;
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 121, 210);
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+  }
+
+  .pricecard div{
+    font-size: 24px;
+    line-height: 29px;
+    margin-top: 40px;
+  }
+
+  .pricecard span
+  {
+    display: block;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 43px;
+    margin-top: 16px;
+  }
+  .pricecard h4{
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 43px;
+  }
+
+  /* bysize */
+
+  .bysize{
+    width: 98%;
+    height: auto;
+  }
+  
+  .size-filter{
+    padding: 10px;
+    width: 100%;
+    border-radius: 8px;
+    margin: auto;
+    display: flex;
+
+  }
+  
+  
+  .size-list {
+    height: 350px;
+    width: 292px;
+    margin: 0px 5px;
+    list-style: none;
+  }
+
+  
+  .size-list img {
+    width: 292px;
+    height: 292px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+  }
+  
+  .size-list span {
+    display: block;
+    margin-top: 8px;
+    font-size: 0.9rem;
+    font-weight: 500;
+  }
+
+  
 
 .productcard{
 
