--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -472,7 +472,113 @@ width: 70%;
   }
 
 
+/* my account */
 
+.myaccount{
+  width: 98%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.acc-left{
+  width: 30%;
+  border-right: 1px solid #ccc;
+}
+.acc-right{
+  width: 70%;
+}
+
+.leftprofile .left-btns button{
+  display: block;
+  width: 100%;
+  height: 40px;
+  border: none;
+  background-color: white;
+  text-align: left;
+  padding-left: 40px;
+  font-weight: 700;
+}
+
+.leftprofile .left-Card{
+  width: 260px;
+  height: 320px;
+  background-color: #f9fafb;
+  padding: 20px;
+  margin: 30px auto;
+  text-align: center;
+}
+
+.left-Card button{
+  background-color: #fff;
+  border: 1px solid #2f3337;
+  border-radius: 3px;
+  color: #2f3337;
+  font-size: 14px;
+  height: 40px;
+  margin-top: 15px;
+  margin-bottom: 5px;
+  width: 140px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.dashboard-box{
+  width: 98%;
+  height: 320px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.dashboard-box .dashbox{
+  width: 260px;
+  height: 120px;
+  border-radius: 3px;
+  border: 1px solid rgb(218, 220, 223);
+  box-shadow: rgba(47, 51, 55, 0.2) 0px 2px 1px 0px;
+  box-sizing: border-box;
+  color: rgb(47, 51, 55);
+  display: flex;
+  justify-content: space-between;
+  margin: 4px;
+  padding: 10px 14px 10px 10px;
+}
+
+.dash-icons{
+  font-size: 30px;
+}
+
+.dashbox .text{
+  width: 195px;
+}
+
+.dashbox .text span{
+    font-weight: 600;
+    font-size: 14px;
+}
+
+.dashbox .text p{
+  font-size: 14px;
+}
+
+.dash {
+  height: 150px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.dash .dashes{
+  height: 100px;
+  width: 415px;
+  padding: 16px;
+  background-color: rgb(249, 250, 251);
+  border: 4px solid rgb(218, 220, 223);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 
 /* Home */
@@ -620,19 +726,6 @@ width: 70%;
 .hosting-pro{
 height: 350px;
 margin-top: 30px;
-}
-
-.think-product{
-  height: 400px;
-  width: 98%;
-  margin: auto;
-  background-color: red;
-}
-
-.think-pro{
-  height: 300px;
-  margin-top: 40px;
-  background-color: yellow;
 }
 
 .trending-product{
